[gd_scene load_steps=12 format=2]

[ext_resource path="res://juego/HUD/PanelPuntuacion.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/moustro/Moustro.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego/menus/MenuPrincipal.gd" type="Script" id=3]
[ext_resource path="res://assents temporal/fondo2.png" type="Texture" id=4]
[ext_resource path="res://juego/botones/BotonBase.tscn" type="PackedScene" id=5]
[ext_resource path="res://recursos/font/IrishGrover-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assents temporal/adn.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Moustro:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Moustro:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "evolucionar"
tracks/0/type = "value"
tracks/0/path = NodePath("Moustro:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 0.4, 0.4 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Moustro")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cambiar_skin"
} ]
}

[node name="MenuPrincipal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 350.0 ],
"_edit_lock_": true,
"_edit_vertical_guides_": [ 212.0 ]
}
juego = "res://juego/nivel/Nivel.tscn"
menu_evolucion = "res://juego/menus/MenuEvolucionar.tscn"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 213, 350 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="PanelPuntuacion" parent="." instance=ExtResource( 1 )]
position = Vector2( 329, 36 )

[node name="Moustro" parent="." instance=ExtResource( 2 )]
position = Vector2( 212, 350 )
scale = Vector2( 1.5, 1.5 )

[node name="BotonJugar" parent="." instance=ExtResource( 5 )]
margin_left = 127.0
margin_top = 455.0
margin_right = 298.0
margin_bottom = 508.0

[node name="BotonEvolucionar" parent="." instance=ExtResource( 5 )]
margin_left = 127.0
margin_top = 527.0
margin_right = 298.0
margin_bottom = 580.0
text = "Evolucionar"

[node name="moneda" type="Sprite" parent="."]
position = Vector2( 172, 601 )
rotation = 0.453786
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 7 )

[node name="LabelPuntEvolucionar" type="Label" parent="."]
margin_left = 173.0
margin_top = 584.0
margin_right = 252.0
margin_bottom = 621.0
custom_colors/font_color = Color( 1, 0.654902, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1000"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/default = SubResource( 3 )
anims/evolucionar = SubResource( 4 )

[connection signal="pressed" from="BotonJugar" to="." method="_on_BotonJugar_pressed"]
[connection signal="pressed" from="BotonEvolucionar" to="." method="_on_BotonEvolucionar_pressed"]
